--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "angularx-social-login": "^3.5.4",
     "bootstrap": "^4.5.0",
+    "jwt-decode": "^3.1.2",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
