--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.3",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^11.0.2",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
@@ -25,7 +25,8 @@
     "@angular/router": "~11.0.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "angularx-social-login": "^3.5.4",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
